# webhook-gateway

./: .dockerignore  .gitignore  .gitleaks.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
scripts/: smoke-test.sh
src/: app.py  config.py  github_webhook.py  lark_webhook.py  main.py
src/webhook/: github.py  lark.py
tests/: test_github_webhook.py  test_lark_webhook.py  test_main.py
