[project]
name = "webhook-gateway"
version = "1.0.0"
description = "Webhook gateway for CI/CD notifications and Lark card callbacks"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
